--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -1,4 +1,22 @@
 .dashboard-container {
     background: #f2f2f2;
-    
+    width: 90%;
+    margin-left: 10%;
+    box-sizing: border-box;
+    padding: 30px;
+}
+.post-container img {
+    height: 10vh;
+}
+.post-container {
+    display: flex;
+    justify-content: space-between;
+    background: white;
+    padding: 10px;
+}
+.post-title{
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    padding: 15px;
 }
